--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.8",
     "@types/redux-thunk": "^2.1.0",
+    "bootstrap": "^5.0.0-beta2",
     "node-sass": "^5.0.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
