--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/redux-logger": "^3.0.8",
     "@types/redux-thunk": "^2.1.0",
     "antd": "^4.14.0",
+    "axios": "^0.21.1",
     "node-sass": "^5.0.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
