--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/redux-logger": "^3.0.8",
     "@types/redux-thunk": "^2.1.0",
     "antd": "^4.14.0",
+    "apexcharts": "^3.26.0",
     "axios": "^0.21.1",
     "node-sass": "^5.0.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
