--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rs-lang",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Mikhail-Hursky.github.io/RSLang",
   "dependencies": {
     "@ant-design/colors": "^6.0.0",
     "@ant-design/icons": "^4.6.2",
@@ -20,10 +21,11 @@
     "antd": "^4.14.0",
     "apexcharts": "^3.26.0",
     "axios": "^0.21.1",
+    "gh-pages": "^3.1.0",
     "node-sass": "^5.0.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
-    "react-apexcharts": "^1.3.7",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
@@ -35,6 +37,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
